
## Makefile.am -- Process this file with automake to produce Makefile.in
SUBDIRS = Utils 
AM_CFLAGS=$(WANT_OPT) $(WANT_ARCH)-Wall -Wpointer-arith -Wstrict-prototypes -Winline -Wundef -g -I$(top_srcdir)//Carlina/Drivers/STM32F4xx_HAL_Driver/inc -I$(top_srcdir)/inc
AM_CPPFLAGS =$(WANT_OPT) -$(WANT_ARCH) -ffunction-sections -fdata-sections  -fno-exceptions -I$(top_srcdir)/tvc-macros -I$(top_srcdir)/Carlina/Drivers/STM32F4xx_HAL_Driver/inc  
