
## Makefile.am -- Process this file with automake to produce Makefile.in
SUBDIRS = Src
AM_CFLAGS=-Wall -Wpointer-arith -Wstrict-prototypes -Winline -Wundef -g -I$(top_srcdir)/STM32F4xx_HAL_Driver/inc -I$(top_srcdir)/inc -DSTM32$(PRODUCT)xx -DFAMILLY$(FAMILLY) -I$(top_srcdir)/STM32$(FAMILLY)xx_HAL_Driver/Inc
 
